--- a/essential_meals_project/em_website/templates/base.html
+++ b/essential_meals_project/em_website/templates/base.html
@@ -1,17 +1,25 @@
-{% load static %}
-<!DOCTYPE html>
+{% load static %}<!DOCTYPE html>
 <html>
-<head>
+  <head>
+    <meta charset="utf-8">
+    <title>{% block title %}Django Boards{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+  </head>
+  <body>
 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand"  href = "http://localhost:8000/em_website/home/">Home</a>
+      </div>
+    </nav>
 
-	{% if title %}
-		<title>ESSENTIAL MEAL - {{ title }}</title>
-	{% else %}
-		<title>ESSENTIAL MEAL</title>
-	{% endif %}
-</head>
-<body>
-	{% block content %}{% endblock %}
-
-</body>
+    <div class="container">
+      <ol class="breadcrumb my-4">
+        {% block breadcrumb %}
+        {% endblock %}
+      </ol>
+      {% block content %}
+      {% endblock %}
+    </div>
+  </body>
 </html>
