Fixed home page so it is only accessible after login, added logout functionality

--- a/essential_meals_project/em_website/templates/Registration/login.html
+++ b/essential_meals_project/em_website/templates/Registration/login.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+
+{% block breadcrumb %}
+  <li class="breadcrumb-item active">Welcome to Essential Meals</li>
+{% endblock %}
+
 {% block content %}
 	<!DOCTYPE html>
 	<html>
