--- a/essential_meals_project/em_website/templates/home.html
+++ b/essential_meals_project/em_website/templates/home.html
@@ -5,6 +5,8 @@
 {% endblock %}
 
 {% block content %}
+{% if user.is_authenticated %}
+  <h3>Welcome, {{ user.username }}!</h3>
   <table class="table">
     <thead class="thead-inverse">
       <tr>
@@ -28,4 +30,11 @@
       {% endfor %}
     </tbody>
   </table>
+  <form action="{% url 'logout' %}">
+         <button type="submit">Click me</button>
+      </form>
+{% else %}
+  <h3>You are not logged in</h3>
+  <p>Click <a href="{% url 'login' %}">here</a> to login.</p>
+{% endif %}
 {% endblock %}
