--- a/essential_meals_project/em_website/templates/home.html
+++ b/essential_meals_project/em_website/templates/home.html
@@ -31,7 +31,7 @@
     </tbody>
   </table>
   <form action="{% url 'logout' %}">
-         <button type="submit">Click me</button>
+         <button type="submit">Logout</button>
       </form>
 {% else %}
   <h3>You are not logged in</h3>
