--- a/essential_meals_project/em_website/templates/topics.html
+++ b/essential_meals_project/em_website/templates/topics.html
@@ -10,6 +10,9 @@
 {% endblock %}
 
 {% block content %}
+<div class="mb-4">
+  <a href="{% url 'new_topic' board.pk %}" class="btn btn-primary">New topic</a>
+</div>
   <table class="table">
     <thead class="thead-inverse">
       <tr>
@@ -21,15 +24,15 @@
       </tr>
     </thead>
     <tbody>
-        {% for topic in board.topics.all %}
-        <tr>
-          <td><a href="{% url 'topic_posts' board.pk topic.pk %}">{{ topic.subject }}</a></td>
-          <td>{{ topic.starter.username }}</td>
-          <td>0</td>
-          <td>0</td>
-          <td>{{ topic.last_updated }}</td>
-        </tr>
-      {% endfor %}
+      {% for topic in board.topics.all %}
+  <tr>
+    <td><a href="{% url 'topic_posts' board.pk topic.pk %}">{{ topic.subject }}</a></td>
+    <td>{{ topic.starter.username }}</td>
+    <td>0</td>
+    <td>0</td>
+    <td>{{ topic.last_updated }}</td>
+  </tr>
+{% endfor %}
     </tbody>
   </table>
 {% endblock %}
