--- a/essential_meals_project/templates/Registration/password_reset_confirm.html
+++ b/essential_meals_project/templates/Registration/password_reset_confirm.html
@@ -67,36 +67,12 @@
 
         <body>
 
-        <div class="imgcontainer">
-
-        </div>
-
-        <div class="container">
-            <h2>Login</h2>
-            <form method="post">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit">Login</button>
+            <h1>Set a new password!</h1>
+            <form method="POST">
+              {% csrf_token %}
+              {{ form.as_p }}
+              <input type="submit" value="Change my password">
             </form>
-            <form action="{% url 'signup' %}">
-                <button type="submit">Signup</button>
-            </form>
-
-
-<!--            <a href="../home">
-                <button type="submit">Login</button>
-            </a>
-             -->
-<!--            <label>
-                <input type="checkbox" checked="checked" name="remember"> Remember me
-            </label> -->
-        </div>
-
-        <div class="container">
-            <button type="button" class="cancelbtn">Cancel</button>
-            <span class="psw">Forgot <a href="http://localhost:8000/accounts/password_reset/">password?</a></span>
-        </div>
-
 
 
         </body>
