--- a/essential_meals_project/essential_meals_project/templates/Registration/password_reset_done.html
+++ b/essential_meals_project/essential_meals_project/templates/Registration/password_reset_done.html
@@ -71,32 +71,8 @@
 
         </div>
 
-        <div class="container">
-            <h2>Login</h2>
-            <form method="post">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit">Login</button>
-            </form>
-            <form action="{% url 'signup' %}">
-                <button type="submit">Signup</button>
-            </form>
-
-
-<!--            <a href="../home">
-                <button type="submit">Login</button>
-            </a>
-             -->
-<!--            <label>
-                <input type="checkbox" checked="checked" name="remember"> Remember me
-            </label> -->
-        </div>
-
-        <div class="container">
-            <button type="button" class="cancelbtn">Cancel</button>
-            <span class="psw">Forgot <a href="http://localhost:8000/accounts/password_reset/">password?</a></span>
-        </div>
-
+        <h1>Check your inbox.</h1>
+        <p>We've emailed you instructions for setting your password. You should receive the email shortly!</p>
 
 
         </body>
