--- a/essential_meals_project/templates/Registration/password_reset_complete.html
+++ b/essential_meals_project/templates/Registration/password_reset_complete.html
@@ -67,36 +67,8 @@
 
         <body>
 
-        <div class="imgcontainer">
-
-        </div>
-
-        <div class="container">
-            <h2>Login</h2>
-            <form method="post">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit">Login</button>
-            </form>
-            <form action="{% url 'signup' %}">
-                <button type="submit">Signup</button>
-            </form>
-
-
-<!--            <a href="../home">
-                <button type="submit">Login</button>
-            </a>
-             -->
-<!--            <label>
-                <input type="checkbox" checked="checked" name="remember"> Remember me
-            </label> -->
-        </div>
-
-        <div class="container">
-            <button type="button" class="cancelbtn">Cancel</button>
-            <span class="psw">Forgot <a href="http://localhost:8000/accounts/password_reset/">password?</a></span>
-        </div>
-
+            <h1>Password reset complete</h1>
+            <p>Your new password has been set. You can log in now on the <a href="{% url 'login' %}">log in page</a>.</p>
 
 
         </body>
