added logout button

--- a/essential_meals_project/em_website/templates/Registration/login.html
+++ b/essential_meals_project/em_website/templates/Registration/login.html
@@ -79,7 +79,7 @@
                 <button type="submit">Login</button>
             </form>
             <form action="{% url 'signup' %}">
-                <button type="submit">Signup</button>
+                <button type="submit">Create an Account</button>
             </form>
 
 
