added edit account info page

--- a/essential_meals_project/essential_meals_project/templates/Registration/password_reset.html
+++ b/essential_meals_project/essential_meals_project/templates/Registration/password_reset.html
@@ -76,7 +76,7 @@
               <label for="team_name">Enter Email: </label>
               <input id="team_name" type="text" name="name_field" ><!-- value="Default name for team."> -->
 
-              <input type="submit" value="Send me instructions!">
+              <button type="submit" value="Send me instructions!">
             </form>
 
 
