--- a/essential_meals_project/templates/profile.html
+++ b/essential_meals_project/templates/profile.html
@@ -76,17 +76,8 @@
             <form method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button type="submit">Delete Account</button>
+                <button type="submit">Update Account</button>
             </form>
-
-
-<!--            <a href="../home">
-                <button type="submit">Login</button>
-            </a>
-             -->
-<!--            <label>
-                <input type="checkbox" checked="checked" name="remember"> Remember me
-            </label> -->
         </div>
 
         </body>
