--- a/essential_meals_project/em_website/templates/Registration/password_reset.html
+++ b/essential_meals_project/em_website/templates/Registration/password_reset.html
@@ -67,6 +67,17 @@
 
         <body>
 
+<!--             <h1>Forgot your password?</h1>
+            <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
+
+            <form method="POST">
+              {% csrf_token %}
+              {{ form.as_p }}
+              <label for="team_name">Enter Email: </label>
+              <input id="team_name" type="text" name="name_field" >value="Default name for team.">
+
+              <input type="submit" value="Send me instructions!">
+            </form> -->
             <h1>Forgot your password?</h1>
             <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
 
@@ -76,7 +87,7 @@
               <label for="team_name">Enter Email: </label>
               <input id="team_name" type="text" name="name_field" ><!-- value="Default name for team."> -->
 
-              <input type="submit" value="Send me instructions!">
+              <button type="submit" value="Send me instructions!">
             </form>
 
 
