--- a/essential_meals_project/templates/base.html
+++ b/essential_meals_project/templates/base.html
@@ -10,6 +10,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand"  href = "http://localhost:8000/em_website/home/">Home</a>
+        <a class="navbar-brand"  href = "http://localhost:8000/em_website/search/">Search</a>
         <a class="navbar-brand"  href = "http://localhost:8000/em_website/profile/">Profile</a>
       </div>
     </nav>
