--- a/essential_meals_project/templates/search.html
+++ b/essential_meals_project/templates/search.html
@@ -17,30 +17,18 @@
             border: 1px solid #ccc;
             box-sizing: border-box;
         }
-        button {
-			color: white;
+        .search_Btn {
+        	background-color: #4CAF50;
+			width: auto;
+			opacity: 0.8;
+        	border: none;
+			cursor: pointer;
 			padding: 14px 20px;
 			margin: 8px 0;
-			border: none;
-			cursor: pointer;
-			width: 100%;
+			color: white;
         }
         button:hover {
-          opacity: 0.8;
-        }
-        .search_Btn {
-        	width: auto;
-			padding: 10px 18px;
-			background-color: #4CAF50
-        }
-        .logout_Btn {
-        	background-color: #f44336;
-			color: white;
-			padding: 14px 20px;
-			margin: 8px 0;
-			border: none;
-			cursor: pointer;
-			width: auto;
+          	
         }
         .container {
 			padding: 16px;
@@ -50,12 +38,12 @@
 
 <body>
 	{% if user.is_authenticated %}
-	    <h3>What recipe do you want?</h3>
+	    <h3>RECIPE YOU WANT...</h3>
 
 	    <div class="container">
 	    <form action="/action_page.php">
-			<input type="text" name="recipe_Search">
-			<button type="button" class="search_Btn">Search</button><br>
+			<input type="text" name="button">
+			<button class="search_Btn">Search</button><br>
 		</form>
 		</div>
 
