Recipe Model views & Model stretched to admin

--- a/essential_meals_project/templates/topic_posts.html
+++ b/essential_meals_project/templates/topic_posts.html
@@ -34,6 +34,8 @@
               </div>
             </div>
             {{ post.message }}
+          </div>
+          </div>
             {% if post.created_by == user %}
               <div class="mt-3">
                 <a href="#" class="btn btn-primary btn-sm" role="button">Edit</a>
