--- a/essential_meals_project/templates/topics.html
+++ b/essential_meals_project/templates/topics.html
@@ -10,6 +10,9 @@
 {% endblock %}
 
 {% block content %}
+<div class="mb-4">
+  <a href="{% url 'new_topic' board.pk %}" class="btn btn-primary">New topic</a>
+</div>
   <table class="table">
     <thead class="thead-inverse">
       <tr>
@@ -30,6 +33,7 @@
           <td>{{ topic.last_updated }}</td>
         </tr>
       {% endfor %}
+      
     </tbody>
   </table>
 {% endblock %}
