Added Logo & Hamburger menu

--- a/essential_meals_project/essential_meals_project/templates/Registration/password_reset.html
+++ b/essential_meals_project/essential_meals_project/templates/Registration/password_reset.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block Hamburger_Menu_Content %}
+  <a class="dropdown-item" href="http://localhost:8000/em_website/signup/">Sign up</a>
+  <a class="dropdown-item" href="http://localhost:8000/em_website/password_reset/">Forgot Password</a>
+{% endblock %}
+
 {% block breadcrumb %}
   <li class="breadcrumb-item active">Welcome to Essential Meals</li>
 {% endblock %}
@@ -76,7 +81,7 @@
               <label for="team_name">Enter Email: </label>
               <input id="team_name" type="text" name="name_field" ><!-- value="Default name for team."> -->
 
-              <button type="submit" value="Send me instructions!">
+              <button type="submit" value="Send me instructions!">Send Request</button>
             </form>
 
 
