--- a/essential_meals_project/templates/Registration/password_reset_form.html
+++ b/essential_meals_project/templates/Registration/password_reset_form.html
@@ -73,6 +73,8 @@
             <form method="POST">
               {% csrf_token %}
               {{ form.as_p }}
+              <!-- <button>Send Request</button> -->
+              <input type="submit" value="Send Request">
             </form>
 
 
