--- a/essential_meals_project/em_website/templates/Registration/password_reset.html
+++ b/essential_meals_project/em_website/templates/Registration/password_reset.html
@@ -78,7 +78,7 @@
 
               <input type="submit" value="Send me instructions!">
             </form> -->
-            <h1>Forgot your password?</h1>
+            <h1>Forgot your password?21341234</h1>
             <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
 
             <form method="POST">
