--- a/essential_meals_project/essential_meals_project/templates/Registration/login.html
+++ b/essential_meals_project/essential_meals_project/templates/Registration/login.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block Hamburger_Menu_Content %}
+  <a class="dropdown-item" href="http://localhost:8000/em_website/signup/">Sign up</a>
+  <a class="dropdown-item" href="http://localhost:8000/accounts/password_reset/">Forgot Password</a>
+{% endblock %}
+
 {% block breadcrumb %}
   <li class="breadcrumb-item active">Welcome to Essential Meals</li>
 {% endblock %}
@@ -93,7 +98,7 @@
         </div>
 
         <div class="container">
-            <button type="button" class="cancelbtn">Cancel</button>
+            
             <span class="psw">Forgot <a href="http://localhost:8000/accounts/password_reset/">password?</a></span>
         </div>
 
