--- a/essential_meals_project/templates/base.html
+++ b/essential_meals_project/templates/base.html
@@ -4,21 +4,71 @@
     <meta charset="utf-8">
     <title>{% block title %}Essential Meals{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+
+    <style>
+      .container {
+        padding: 16px;
+      }
+      .dropbtn {
+        background-color: #4CAF50;
+        color: white;
+        padding: 16px;
+        font-size: 20px;
+        border: none;
+      }
+      .dropdown {
+        position: relative;
+        display: inline-block;
+      }
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+      }
+      .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+      }
+      .dropdown-content a:hover {background-color: #ddd;}
+      .dropdown:hover .dropdown-content {display: block;}
+      .dropdown:hover .dropbtn {background-color: #3e8e41;}
+    </style>
   </head>
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand"  href = "http://localhost:8000/em_website/home/">Home</a>
-        <a class="navbar-brand"  href = "http://localhost:8000/em_website/search/">Search</a>
-        <a class="navbar-brand"  href = "http://localhost:8000/em_website/profile/">Profile</a>
+
+        <!--Logo-->
+        <a href="http://localhost:8000/em_website/home/">
+          <img src="static/images/EM_Logo.png" style="width:200px;height:42px;border:0;">
+        </a>
+
+        <!--Navigation bar-->
+        {% block navbar_Content %}
+        {% endblock %}
+
+        <!--Hamburger menu-->
+        <div class="dropdown">
+          <img src="static/images/hamburger_menu.png" class="dropbtn"></button>
+          <div class="dropdown-content">
+            {% block Hamburger_Menu_Content %}
+            {% endblock %}
+          </div>
+        </div>
       </div>
     </nav>
-
+    
     <div class="container">
       
       {% block content %}
       {% endblock %}
     </div>
+
   </body>
 </html>
