--- a/essential_meals_project/templates/profile.html
+++ b/essential_meals_project/templates/profile.html
@@ -1,5 +1,18 @@
 {% extends "base.html" %}
 
+{% block navbar_Content %}
+  <a class="navbar-brand"  href="http://localhost:8000/em_website/search/">Search</a>
+  <a class="navbar-brand"  href="#">Calendar</a>
+{% endblock %}
+
+{% if user.is_authenticated %}
+  {% block Hamburger_Menu_Content %}
+    <a class="dropdown-item" href="#">My Account</a>
+    <a class="dropdown-item" href="http://localhost:8000/em_website/profile/">Edit Account</a>
+    <a class="dropdown-item" href="#">Logout</a>
+  {% endblock %}
+{% endif %}
+
 {% block breadcrumb %}
     <li class="breadcrumb-item active">Welcome to Essential Meals</li>
 {% endblock %}
