Updated naviagation bar

--- a/essential_meals_project/essential_meals_project/templates/Registration/signup.html
+++ b/essential_meals_project/essential_meals_project/templates/Registration/signup.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block Hamburger_Menu_Content %}
-  <a class="dropdown-item" href="http://localhost:8000/em_website/signup/">Sign up</a>
+  <a class="dropdown-item" href="http://localhost:8000/templates/signup/">Sign up</a>
   <a class="dropdown-item" href="http://localhost:8000/em_website/password_reset/">Forgot Password</a>
 {% endblock %}
 
