--- a/essential_meals_project/templates/results.html
+++ b/essential_meals_project/templates/results.html
@@ -54,6 +54,9 @@
         <h3>Search Results</h3>
 
     <ul>
+        {% for recipe in custom_recipes %}
+            <a class="recipe" href ="{% url 'em_view_recipe' recipe.slug %}"><li> <img src="../../static/custom_recipe" height=100dp width=100dp> {{ recipe.title }} </li></a>
+        {% endfor %}
         {% for key, value in recipes.items %}
             <a class="recipe" href = {{ value.0 }}><li> <img src={{ value.1 }} height=100dp width=100dp> {{ key }} </li></a>
         {% endfor %}
