--- a/essential_meals_project/templates/Registration/password_reset_complete.html
+++ b/essential_meals_project/templates/Registration/password_reset_complete.html
@@ -1,8 +1,30 @@
 {% extends "base.html" %}
 
+{% block title %}
+    Essential Meals - Password Reset Completed
+{% endblock %}
+
+{% block navbar_Content %}
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'em_home' %}">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'em_search' %}">Search</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Calendar</a>
+    </li>
+{% endblock %}
+
 {% block Hamburger_Menu_Content %}
-  <a class="dropdown-item" href="http://localhost:8000/em_website/signup/">Sign up</a>
-  <a class="dropdown-item" href="http://localhost:8000/accounts/password_reset/">Forgot Password</a>
+    {% if user.is_authenticated %}
+        <a class="dropdown-item" href="#">My Account</a>
+        <a class="dropdown-item" href="{% url 'em_profile' %}">Edit Account</a>
+        <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+    {% else %}
+        <a class="dropdown-item" href="{% url 'signup' %}">Sign up</a>
+        <a class="dropdown-item" href="{% url 'password_reset' %}">Forgot Password</a>
+    {% endif %}
 {% endblock %}
 
 {% block breadcrumb %}
@@ -46,10 +68,6 @@
                   text-align: center;
                   margin: 24px 0 12px 0;
                 }
-                /*img.avatar {
-                  width: 40%;
-                  border-radius: 50%;
-                }*/
                 .container {
                   padding: 16px;
                 }
@@ -73,7 +91,7 @@
         <body>
 
           <h1>Password reset complete</h1>
-          <p>Your new password has been set. You can log in now on the <a href="{% url 'login' %}">log in page</a>.</p>
+          <p>Your new password has been set. You can log in now on the <a href="{% url 'login' %}">login page</a>.</p>
 
 
         </body>
