--- a/essential_meals_project/templates/Registration/password_reset.html
+++ b/essential_meals_project/templates/Registration/password_reset.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %}
 
+{% block title %}
+    Essential Meals - Reset Password
+{% endblock %}
+
+{% block Hamburger_Menu_Content %}
+  <a class="dropdown-item" href="http://localhost:8000/em_website/signup/">Sign up</a>
+  <a class="dropdown-item" href="http://localhost:8000/em_website/password_reset/">Forgot Password</a>
+{% endblock %}
+
 {% block breadcrumb %}
   <li class="breadcrumb-item active">Welcome to Essential Meals</li>
 {% endblock %}
@@ -67,18 +76,7 @@
 
         <body>
 
-<!--             <h1>Forgot your password?</h1>
-            <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
-
-            <form method="POST">
-              {% csrf_token %}
-              {{ form.as_p }}
-              <label for="team_name">Enter Email: </label>
-              <input id="team_name" type="text" name="name_field" >value="Default name for team.">
-
-              <input type="submit" value="Send me instructions!">
-            </form> -->
-            <h1>Forgot your password?21341234</h1>
+            <h1>Forgot your password?</h1>
             <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
 
             <form method="POST">
@@ -87,7 +85,7 @@
               <label for="team_name">Enter Email: </label>
               <input id="team_name" type="text" name="name_field" ><!-- value="Default name for team."> -->
 
-              <button type="submit" value="Send me instructions!">
+              <button type="submit" value="Send me instructions!">Send Request</button>
             </form>
 
 
