--- a/essential_meals_project/templates/Registration/password_reset_confirm.html
+++ b/essential_meals_project/templates/Registration/password_reset_confirm.html
@@ -1,8 +1,30 @@
 {% extends "base.html" %}
 
+{% block title %}
+    Essential Meals - Password Reset
+{% endblock %}
+
+{% block navbar_Content %}
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'em_home' %}">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'em_search' %}">Search</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Calendar</a>
+    </li>
+{% endblock %}
+
 {% block Hamburger_Menu_Content %}
-  <a class="dropdown-item" href="http://localhost:8000/em_website/signup/">Sign up</a>
-  <a class="dropdown-item" href="http://localhost:8000/accounts/password_reset/">Forgot Password</a>
+    {% if user.is_authenticated %}
+        <a class="dropdown-item" href="#">My Account</a>
+        <a class="dropdown-item" href="{% url 'em_profile' %}">Edit Account</a>
+        <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+    {% else %}
+        <a class="dropdown-item" href="{% url 'signup' %}">Sign up</a>
+        <a class="dropdown-item" href="{% url 'password_reset' %}">Forgot Password</a>
+    {% endif %}
 {% endblock %}
 
 {% block breadcrumb %}
@@ -32,7 +54,8 @@
                   margin: 8px 0;
                   border: none;
                   cursor: pointer;
-                  width: 100%;
+                  width: 200px;
+                  border-radius: 15px;
                 }
                 button:hover {
                   opacity: 0.8;
@@ -46,12 +69,10 @@
                   text-align: center;
                   margin: 24px 0 12px 0;
                 }
-                /*img.avatar {
-                  width: 40%;
-                  border-radius: 50%;
-                }*/
-                .container {
-                  padding: 16px;
+                .setting_password_Container {
+                    padding: 16px;
+                    width: 1000px;
+                    margin: 0 auto;  
                 }
                 span.psw {
                   float: right;
@@ -71,15 +92,14 @@
         </head>
 
         <body>
-
-            <h1>Set a new password!</h1>
-            <form method="POST">
-              {% csrf_token %}
-              {{ form.as_p }}
-              <input type="submit" value="Change my password">
-            </form>
-
-
+            <div class="setting_password_Container">
+                <h1>Set a new password!</h1>
+                <form method="POST">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" value="Change my password">Change My Password</button>
+                </form>
+            </div>
         </body>
 
     </html>
