--- a/essential_meals_project/templates/base.html
+++ b/essential_meals_project/templates/base.html
@@ -70,8 +70,8 @@
 
     <body>
         <header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar">
-            <a class="navbar-brand mr-0 mr-md-2" href="/" aria-label="Essential Meals">
-                <img src="static/images/EM_Logo.png" style="width:100px;height:50px;border:0;">
+            <a class="navbar-brand mr-0 mr-md-2" href="{% url 'em_home'%}" aria-label="Essential Meals">
+                <img src="{% static 'images/EM_Logo.png' %}" style="width:150px;height:60px;border:0;">
             </a>
 
             <div class="navbar-nav-scroll">
@@ -83,7 +83,7 @@
 
             <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
                 <div class="dropdown">
-                    <img src="static/images/hamburger_menu.png" style="width:50px;height:50px;border:0;background:none;" class="dropbtn">
+                    <img src="{% static 'images/hamburger_menu.png' %}" style="width:50px;height:50px;border:0;background:none;" class="dropbtn">
                     <div class="dropdown-content">
                         {% block Hamburger_Menu_Content %}
                         {% endblock %}
