--- a/essential_meals_project/templates/home.html
+++ b/essential_meals_project/templates/home.html
@@ -1,19 +1,35 @@
 {% extends 'base.html' %}
 
-{% if user.is_authenticated %}
-  {% block navbar_Content %}
-    <a class="navbar-brand"  href="http://localhost:8000/em_website/search/">Search</a>
-    <a class="navbar-brand"  href="#">Calendar</a>
-  {% endblock %}
-  {% block Hamburger_Menu_Content %}
-    <a class="dropdown-item" href="#">My Account</a>
-    <a class="dropdown-item" href="http://localhost:8000/em_website/profile/">Edit Account</a>
-    <a class="dropdown-item" href="#">Logout</a>
-  {% endblock %}
-{% endif %}
+{% block title %}
+    Essential Meals - Home
+{% endblock %}
+
+{% block navbar_Content %}
+    <li class="nav-item active">
+        <a class="nav-link" href="{% url 'em_home' %}">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'em_search' %}">Search</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Calendar</a>
+    </li>
+{% endblock %}
+
+
+{% block Hamburger_Menu_Content %}
+    {% if user.is_authenticated %}
+        <a class="dropdown-item" href="#">My Account</a>
+        <a class="dropdown-item" href="{% url 'em_profile' %}">Edit Account</a>
+        <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+    {% else %}
+        <a class="dropdown-item" href="{% url 'signup' %}">Sign up</a>
+        <a class="dropdown-item" href="{% url 'password_reset' %}">Forgot Password</a>
+    {% endif %}
+{% endblock %}
 
 {% block content %}
-{% if user.is_authenticated %}
+{% if user.is_authenticated %}    
 
 <p></p>
   <h3>Welcome, {{ user.username }}!</h3>
@@ -40,9 +56,7 @@
       {% endfor %}
     </tbody>
   </table>
-  <form action="{% url 'logout' %}">
-         <button type="submit">Logout</button>
-  </form>
+
 {% else %}
   <h3>You are not logged in</h3>
   <p>Click <a href="{% url 'login' %}">here</a> to login.</p>
