cancel button color changed

--- a/essential_meals_project/em_website/templates/em_website/signup.html
+++ b/essential_meals_project/em_website/templates/em_website/signup.html
@@ -55,7 +55,7 @@
             margin: 8px 0;
             border: none;
             cursor: pointer;
-            width: 100%;
+            width: 200px;
         }
 
         button:hover {
@@ -109,7 +109,7 @@
                 <button type="submit" style="border-radius: 15px;">Sign up</button>
             </form>
             <form action="{% url 'login' %}">
-                <button type="submit" style="border-radius: 15px">Cancel</button>
+                <button type="submit" style="border-radius: 15px; background-color: rgb(185, 178, 178);">Cancel</button>
             </form>
         </div>
     </body>
