--- a/essential_meals_project/templates/Registration/password_reset_form.html
+++ b/essential_meals_project/templates/Registration/password_reset_form.html
@@ -96,7 +96,7 @@
                     <button type="submit" value="Send Request">Send Request</button>
                 </form>
                 <form action="{% url 'login' %}">
-                    <button type="submit" style="border-radius: 15px">Cancel</button>
+                    <button type="submit" style="border-radius: 15px; background-color: rgb(175, 170, 170);">Cancel</button>
                 </form>
             </div>
         </body>
