Created myAccount page

--- a/essential_meals_project/templates/Registration/password_reset_confirm.html
+++ b/essential_meals_project/templates/Registration/password_reset_confirm.html
@@ -18,7 +18,7 @@
 
 {% block Hamburger_Menu_Content %}
     {% if user.is_authenticated %}
-        <a class="dropdown-item" href="#">My Account</a>
+        <a class="dropdown-item" href="{% url 'em_myAccount' %}">My Account</a>
         <a class="dropdown-item" href="{% url 'em_profile' %}">Edit Account</a>
         <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
     {% else %}
