--- a/essential_meals_project/templates/index2.html
+++ b/essential_meals_project/templates/index2.html
@@ -1,11 +1,34 @@
 {% extends "base.html" %}
 
 {% block title %}{{ block.super }} - All Recipes{% endblock %}
+{% block navbar_Content %}
+    <li class="nav-item active">
+        <a class="nav-link" href="{% url 'em_home' %}">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'em_search' %}">Search</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Calendar</a>
+    </li>
+{% endblock %}
 
+
+{% block Hamburger_Menu_Content %}
+    {% if user.is_authenticated %}
+        <a class="dropdown-item" href="#">My Account</a>
+        <a class="dropdown-item" href="{% url 'em_profile' %}">Edit Account</a>
+        <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+    {% else %}
+        <a class="dropdown-item" href="{% url 'signup' %}">Sign up</a>
+        <a class="dropdown-item" href="{% url 'password_reset' %}">Forgot Password</a>
+    {% endif %}
+{% endblock %}
 {% block content %}
 <p> </p> 
 <p> </p> 
 <p> </p> 
+
 <div class="mb-4">
   <a href="{% url 'new_recipe'  %}" class="btn btn-primary">New recipe</a>
 </div>
@@ -15,7 +38,7 @@
     
     {% for recipe in object_list%}
     
-    <li><a href="recipes/{{ recipe.slug }}/">{{ recipe.title }}</a></li>
+    <li><a href="/em_website/recipes/{{ recipe.slug }}/">{{ recipe.title }}</a></li>
     {% endfor %}
 </ul>
 {% endblock %}
