--- a/essential_meals_project/templates/new_recipe.html
+++ b/essential_meals_project/templates/new_recipe.html
@@ -10,7 +10,7 @@
 {% block content %}
   <form method="post" novalidate>
     {% csrf_token %}/
-    {% include 'includes/form.html' %}
+    {% include 'form.html' %}
     <button type="submit" class="btn btn-success">Submit</button>
   </form>
 {% endblock %}
