--- a/essential_meals_project/templates/home.html
+++ b/essential_meals_project/templates/home.html
@@ -12,7 +12,7 @@
         <a class="nav-link" href="{% url 'em_search' %}">Search</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Calendar</a>
+        <a class="nav-link" href="{% url 'em_calendar' %}">Calendar</a>
     </li>
 {% endblock %}
 
