--- a/essential_meals_project/em_website/templates/em_website/calendar.html
+++ b/essential_meals_project/em_website/templates/em_website/calendar.html
@@ -13,7 +13,7 @@
     <title>Django Calendar App</title>
     
     <style>
-        .calendar {
+        /* .calendar {
             width: 98%;
             margin: auto;
             font-size: 13px;
@@ -51,6 +51,24 @@
         a {
             color: #17a2b8;
         }
+        .left {
+            float: left;
+        }
+
+        .right {
+            float: right;
+        }
+
+        .btn {
+            outline: none;
+            color: black;
+            background-color: transparent;
+            box-shadow: 0 0 0 0;
+        }
+
+        .clearfix {
+            margin: 15px;
+        } */
     </style>
 </head>
 <body>
