--- a/essential_meals_project/templates/custom_recipe.html
+++ b/essential_meals_project/templates/custom_recipe.html
@@ -81,7 +81,15 @@
 		<div style="margin-left: auto; margin-right:auto;">
 			<div class="column">
 				<div class="card">
-					<h3>{{ recipe.title }}</h3>
+					<form action="" method="POST">
+						{% csrf_token %}
+					  	<button 
+					    	type="submit"
+					      	name="save"
+					    	style="display:inline-block;"><span>&#xe081;</span> Save
+					    </button>
+					</form>
+					<h3 style="display:inline-block;margin-right:10px;">{{ recipe.title }}</h3>
 					<h4>Servings</h4>
 					<p>{{ recipe.number_of_servings }}</p>
 					<h4>Ingredients</h4>
