--- a/essential_meals_project/em_website/templates/em_website/event.html
+++ b/essential_meals_project/em_website/templates/em_website/event.html
@@ -60,7 +60,7 @@
         </head>
         <body>
             <div class="clearfix">
-              <a class="btn btn-info left" href="{'% url 'em_calendar' %}"> Calendar </a>
+              <a class="btn btn-info left" href="{% url 'calendar' %}"> Calendar </a>
             </div>
 
             <form method="post">
