--- a/essential_meals_project/templates/new_recipe.html
+++ b/essential_meals_project/templates/new_recipe.html
@@ -9,7 +9,7 @@
 
 {% block content %}
   <form method="post" novalidate>
-    {% csrf_token %}/
+    {% csrf_token %}
     {% include 'form.html' %}
     <button type="submit" class="btn btn-success">Submit</button>
   </form>
