Added plain Analysis page

--- a/essential_meals_project/templates/custom_recipe.html
+++ b/essential_meals_project/templates/custom_recipe.html
@@ -8,7 +8,10 @@
     </li>
     <li class="nav-item">
         <a class="nav-link" href="#">Calendar</a>
-    </li>
+	</li>
+    <li class="nav-item">
+		<a class="nav-link" href="{% url 'em_analysis' %}">Analysis</a>
+	</li>
 {% endblock %}
 
 {% block Hamburger_Menu_Content %}
