--- a/essential_meals_project/em_website/templates/em_website/signup.html
+++ b/essential_meals_project/em_website/templates/em_website/signup.html
@@ -14,6 +14,9 @@
     <li class="nav-item">
         <a class="nav-link" href="#">Calendar</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'em_analysis' %}">Analysis</a>
+    </li>
 {% endblock %}
 
 {% block Hamburger_Menu_Content %}
@@ -112,9 +115,9 @@
                 {% csrf_token %}
                 {{ form.as_p }}
                 <button type="submit" style="border-radius: 15px;">Sign up</button>
-                <form action="{% url 'login' %}">
-                    <button style="border-radius: 15px; background-color: rgb(185, 178, 178);">Cancel</button>
-                </form>
+            </form>
+            <form action="{% url 'login' %}">
+                <button style="border-radius: 15px; background-color: rgb(185, 178, 178);">Cancel</button>
             </form>
             
         </div>
