--- a/essential_meals_project/templates/base.html
+++ b/essential_meals_project/templates/base.html
@@ -7,6 +7,12 @@
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
         <style>
+            /* body {
+                background-image: url("{% static 'images/wallpaper_home.png' %}");
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: cover;
+            } */
             .bd-navbar {
                 min-height: 4rem;
                 background-color: #ffffff;
@@ -93,7 +99,6 @@
         </header>
         
         <div class="content_Container">
-        
             {% block content %}
             {% endblock %}
         </div>
