--- a/essential_meals_project/templates/index2.html
+++ b/essential_meals_project/templates/index2.html
@@ -11,6 +11,9 @@
     <li class="nav-item">
         <a class="nav-link" href="#">Calendar</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'em_analysis' %}">Analysis</a>
+    </li>
 {% endblock %}
 
 
