--- a/essential_meals_project/templates/profile.html
+++ b/essential_meals_project/templates/profile.html
@@ -12,7 +12,10 @@
         <a class="nav-link" href="{% url 'em_search' %}">Search</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Calendar</a>
+        <a class="nav-link" href="{% url 'em_calendar' %}">Calendar</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'em_analysis' %}">Analysis</a>
     </li>
 {% endblock %}
 
