--- a/essential_meals_project/templates/search.html
+++ b/essential_meals_project/templates/search.html
@@ -12,8 +12,11 @@
         <a class="nav-link" href="{% url 'em_search' %}">Search</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Calendar</a>
-    </li>
+        <a class="nav-link" href="{% url 'em_calendar' %}">Calendar</a>
+	</li>
+    <li class="nav-item">
+		<a class="nav-link" href="{% url 'em_analysis' %}">Analysis</a>
+	</li>
 {% endblock %}
 
 {% block Hamburger_Menu_Content %}
