added analysis page template and links to header

--- a/essential_meals_project/templates/new_recipe.html
+++ b/essential_meals_project/templates/new_recipe.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Start a New Topic{% endblock %}
+{% block title %}Create a new recipe{% endblock %}
 
 {% block breadcrumb %}
 <li class="breadcrumb-item"><a href = "http://localhost:8000/em_website/home/">Home</a>
