--- a/essential_meals_project/templates/custom_recipe.html
+++ b/essential_meals_project/templates/custom_recipe.html
@@ -3,11 +3,14 @@
     <li class="nav-item">
         <a class="nav-link" href="{% url 'em_home' %}">Home</a>
     </li>
-    <li class="nav-item active">
+    <li class="nav-item">
         <a class="nav-link" href="{% url 'em_search' %}">Search</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="{% url 'em_calendar' %}">Calendar</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'em_analysis' %}">Analysis</a>
     </li>
 {% endblock %}
 
