--- a/essential_meals_project/templates/results.html
+++ b/essential_meals_project/templates/results.html
@@ -14,6 +14,9 @@
     <li class="nav-item">
         <a class="nav-link" href="{% url 'em_calendar' %}">Calendar</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'em_analysis' %}">Analysis</a>
+    </li>
 {% endblock %}
 
 {% block Hamburger_Menu_Content %}
